# dcode-ai

./: .env.example  .gitattributes  .gitignore  AGENTS.md  COMPARISON_TABLE.md  Cargo.toml  MONOLITH_SPLITTING_PLAN.md  Makefile  README.md  TODO.md  deny.toml  feature-todo.md  install.ps1  install.sh  test.md
.dcode-ai/: .last_session  config.local.toml  memory.json
.dcode-ai/sessions/: session-1776756943523441-0.events.jsonl  session-1776958954121241-0.events.jsonl  session-1776958954121241-0.json  session-1776959428294856-0.events.jsonl  session-1776959449829127-0.events.jsonl  session-1776959665396574-0.events.jsonl  session-1776959691429006-0.events.jsonl  session-1776959691429006-0.json  session-1776959749952064-0.events.jsonl  session-1776959749952064-0.json  session-1776959759414146-0.events.jsonl  session-1776959759414146-0.json  session-1776960052349627-0.events.jsonl  session-1776960052349627-0.json  session-1776960325596475-0.events.jsonl  session-1776960325596475-0.json  session-1776960506723330-0.events.jsonl  session-1776960506723330-0.json  session-1777012805243796-0.events.jsonl  session-1777012805243796-0.json  session-1777013856728648-0.events.jsonl  session-1777013856728648-0.json  session-1777014294695065-0.events.jsonl  session-1777014294695065-0.json  session-1777014878210340-0.events.jsonl  session-1777014878210340-0.json  session-1777015360986445-0.events.jsonl  session-1777015360986445-0.json  session-1777015403661131-1.events.jsonl  session-1777015403661131-1.json  session-1777016195144108-0.events.jsonl  session-1777016195144108-0.json  session-1777022274911365-0.events.jsonl  session-1777022274911365-0.json  session-1777022871458620-0.events.jsonl  session-1777022871458620-0.json  session-1777023081908810-0.events.jsonl  session-1777023081908810-0.json  session-1777024841578394-0.events.jsonl  session-1777024841578394-0.json  (+34 more)
.github/workflows/: ci.yml  release.yml
.pi/plans/: 2026-05-12-v0.0.10-release.md
crates/autoresearch/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/benches/: tui_perf.rs
crates/cli/src/: activity.rs  app.rs  approval_prompts.rs  cli_index.rs  file_mentions.rs  image_attach.rs  ipc_pending.rs  lib.rs  main.rs  oauth_login.rs  prompt.rs  repl.rs  repl_helpers.rs  runner.rs  runtime_tooling.rs  slash_commands.rs  stream.rs  tool_ui.rs  update_check.rs  web_chat.html  web_server.rs
crates/cli/src/render/: markdown.rs
crates/cli/src/tui/: answer_parse.rs  app.rs  branch_picker.rs  bridge.rs  busy_indicator.rs  clipboard.rs  composer.rs  composer_input.rs  connect_modal.rs  diff_hunk.rs  git.rs  layout.rs  markdown.rs  mod.rs  mouse.rs  mouse_select.rs  oauth_status.rs  onboarding.rs  palette.rs  paste.rs  path_parse.rs  render_helpers.rs  replay.rs  scroll_buffer.rs  shimmer.rs  slash_entries.rs  state.rs  terminal.rs  theme.rs  tool_classify.rs  tool_summary.rs  transcript.rs  tui_types.rs  tui_viewport.rs
crates/cli/src/tui/render/: modals.rs
crates/cli/src/tui/snapshots/: dcode_ai__tui__app__approval_parse_tests__composer_mention.snap  dcode_ai__tui__app__approval_parse_tests__context_gauge_50pct.snap  dcode_ai__tui__app__approval_parse_tests__diff_hunks.snap  dcode_ai__tui__app__approval_parse_tests__markdown_code_block.snap  dcode_ai__tui__app__approval_parse_tests__markdown_table.snap  dcode_ai__tui__app__approval_parse_tests__transcript_tool_done.snap  dcode_ai__tui__app__approval_parse_tests__transcript_user_assistant.snap  dcode_ai_cli__tui__app__approval_parse_tests__composer_mention.snap  dcode_ai_cli__tui__app__approval_parse_tests__context_gauge_50pct.snap  dcode_ai_cli__tui__app__approval_parse_tests__diff_hunks.snap  dcode_ai_cli__tui__app__approval_parse_tests__markdown_code_block.snap  dcode_ai_cli__tui__app__approval_parse_tests__markdown_table.snap  dcode_ai_cli__tui__app__approval_parse_tests__transcript_tool_done.snap  dcode_ai_cli__tui__app__approval_parse_tests__transcript_user_assistant.snap
crates/cli/src/tui/state/: mod.rs  types.rs
crates/cli/src/tui/widgets/: child_activity_overlay.rs  header_banner.rs  mod.rs  queue_preview.rs  status_bar.rs
crates/cli/tests/: cli_commands.rs  web_page_smoke.rs
crates/common/: Cargo.toml
crates/core/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/benches/: token_count.rs
crates/runtime/src/: bash_tool.rs  context_manager.rs  interactive_exec.rs  ipc.rs  last_session.rs  lib.rs  memory_tool.rs  model_limits.rs  model_limits_api.rs  process.rs  pty.rs  sandbox.rs  service.rs  session_store.rs  supervisor.rs  token_count.rs  worktree.rs
crates/runtime/src/supervisor/: mod.rs  session.rs  subagent.rs
docs/: architecture.md  autoresearch-plan.md  benchmarks.md  cli-comparison.md  cli-terminal-fonts.md  configuration.md  context-management.md  improvements-roadmap.md  ipc-ndjson.md  orchestration.md  prd.md  tech-stack.md  tui-command-sidebar-plan.md
docs/documentation/: advanced.md  commands.md  configuration.md  getting-started.md  index.md  interactive-mode.md  permissions.md  providers.md  sessions.md  skills.md  tools.md
docs/plans/: 2026-04-28-best-dcode-ai-ui-perf-pass.md  2026-04-28-codex-parity-improvement-pass.md  2026-04-28-codex-ui-neatness-pass.md  2026-04-28-context-overflow-hardening.md  2026-04-28-message-queue-tui.md  2026-04-28-mouse-capture-scroll-fix.md  2026-04-28-provider-stream-error-hardening.md  2026-04-28-tool-ui-refresh.md  2026-04-29-premium-ui-pass-multiline-pins-subagents.md  2026-04-29-premium-ui-pass-search-history.md  2026-05-01-provider-abstraction-leakage-fix.md  2026-05-04-copilot-provider-and-openai-model-visibility.md  2026-05-04-live-provider-login-and-session-name.md  2026-05-04-openai-codex-anthropic-oauth-integration.md  2026-05-05-drag-drop-image-path-autostage.md  2026-05-05-popup-size-increase.md  2026-05-05-provider-connect-oauth-and-logout-fix.md  2026-05-05-provider-neutrality-and-model-surface-separation.md  2026-05-05-tui-oauth-output-render-fix.md  2026-05-05-ui-overall-improvement-roadmap.md  2026-05-06-tui-logo-paragraph-gap.md  2026-05-12-startup-one-time-approval.md  (+26 more)
(+83 files in other folders)
