[package]
name = "dcode-ai-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "PTY management, sandboxed process execution, IPC server, and session persistence"

[dependencies]
anyhow = { workspace = true }
dcode-ai-common = { workspace = true }
dcode-ai-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
libc = "0.2"
portable-pty = "0.9"
ignore = "0.4"
walkdir = "2"
async-trait = "0.1"
tiktoken-rs = "0.11"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.5"

[[bench]]
name = "token_count"
harness = false
